Created single and archive template files for design post type
Removed category and tag options from design post type.
Created single-tee_design.php
Created archive-tee_design.php

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ plugins/woocommerce-payments
 plugins/woo-gutenberg-products-block
 plugins/woo-variation-swatches
 plugins/wp-file-upload
+plugins/show-current-template
 
 #SRC files
 node_modules
